inou/prp/tests/errors/concat_fail_inline_overlap.prp
/*
:name: concat_fail_inline_overlap
:type: error
:error: duplicate|already exists|already declared|overlap|exists
*/

// Inline tuple concat (`...`) rejects overlapping final fields.
// Doc: ../docs/docs/pyrope/03-bundle.md `mut join2 = (...a,...(const b=20)) // error`

const a = (const x=1,const y=2)
const b = (const x=3,const z=4)
const bad = (...a, ...b) // locate_error_here
